--- a/composer.json
+++ b/composer.json
@@ -49,6 +49,7 @@
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi",
             "@php -r \"file_exists('database/database.sqlite') || touch('database/database.sqlite');\"",
+            "@php -r \"chmod('database/database.sqlite', 0777);\"",
             "@php artisan migrate --graceful --ansi"
         ],
         "dev": [
